chore: update footer copy to '© 2026 Made with ♥️ to accessibility'

--- a/public/video-audio.html
+++ b/public/video-audio.html
@@ -116,7 +116,7 @@
   </div>
   
   <footer>
-    <p>&copy; 2026 Accessibility Guidelines for Designers. Powered by Vincit.</p>
+    <p>© 2026 Made with ♥️ to accessibility</p>
   </footer>
   
   <script src="../js/navigation.js"></script>
