--- a/public/images.html
+++ b/public/images.html
@@ -98,7 +98,7 @@
   </div>
   
   <footer>
-    <p>&copy; 2026 Accessibility Guidelines for Designers. Powered by Vincit.</p>
+    <p>© 2026 Made with ♥️ to accessibility</p>
   </footer>
   
   <script src="../js/navigation.js"></script>
