update skip links on content pages

--- a/public/animations.html
+++ b/public/animations.html
@@ -15,7 +15,9 @@
     <link rel="preload" href="https://www.vincit.com/hubfs/vincit-hubspot-theme-2023/fonts/StudioFeixenVincit-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 <body>
-  <a href="#main-content" class="skip-link">Skip to main content</a>
+  <div id="skip-to-content">
+    <a href="#main-content">Skip to main content</a>
+  </div>
   
   <header>
     <div class="header-container">
