--- a/public/navigation-interaction.html
+++ b/public/navigation-interaction.html
@@ -49,6 +49,7 @@
         <li><a href="video-audio.html">Video & Audio</a></li>
         <li><a href="animations.html">Animations</a></li>
         <li><a href="navigation-interaction.html" aria-current="page">Navigation & Interaction</a></li>
+        <li><a href="patterns.html">Patterns to avoid</a></li>
       </ul>
     </nav>
     
@@ -174,6 +175,8 @@
       
       <nav class="page-nav" aria-label="Page navigation">
         <a href="animations.html" class="page-nav-prev">← Previous: Animations</a>
+        <a href="patterns.html" class="page-nav-next">Next: Patterns to avoid 
+          →</a>
       </nav>
     </main>
   </div>
