--- a/public/structure.html
+++ b/public/structure.html
@@ -50,6 +50,7 @@
         <li><a href="video-audio.html">Video & Audio</a></li>
         <li><a href="animations.html">Animations</a></li>
         <li><a href="navigation-interaction.html">Navigation & Interaction</a></li>
+        <li><a href="patterns.html">Patterns to avoid</a></li>
       </ul>
     </nav>
     
