--- a/public/video-audio.html
+++ b/public/video-audio.html
@@ -49,6 +49,7 @@
         <li><a href="video-audio.html" aria-current="page">Video & Audio</a></li>
         <li><a href="animations.html">Animations</a></li>
         <li><a href="navigation-interaction.html">Navigation & Interaction</a></li>
+        <li><a href="patterns.html">Patterns to avoid</a></li>
       </ul>
     </nav>
     
