add pattern link on index page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li><a href="public/video-audio.html">Video & Audio</a></li>
         <li><a href="public/animations.html">Animations</a></li>
         <li><a href="public/navigation-interaction.html">Navigation & Interaction</a></li>
+        <li><a href="patterns.html">Patterns to avoid</a></li>
       </ul>
     </nav>
     
