update index text, cleaning styles

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           <p>
             Accessibility is a large topic. You are not expected to master
             everything today, not even next year. Start small. Aim for
-            continuous learning, for progress over perfection. Once you are
-            experienced with some aspects, expand your knowledge to new ones.
+            continuous learning. Once you are experienced with some aspects,
+            expand your knowledge to new ones.
           </p>
         </article>
 
@@ -176,9 +176,10 @@
         </article>
 
         <article class="content-section">
-          <h2>Comments? Ideas?</h2>
+          <h2>WIP</h2>
           <p>
-            Send to
+            The guidelines are a living document and a work in progress. If you
+            have any comments or ideas, contact
             <a href="mailto:eyal.eshet@vincit.fi">eyal.eshet@vincit.fi</a>
           </p>
         </article>
