update footer text

--- a/public/patterns.html
+++ b/public/patterns.html
@@ -148,7 +148,7 @@
     </div>
 
     <footer>
-      <p>© 2026. Thanks for considering accessibility ♥️</p>
+      <p>© 2026. Vincit ♥️ accessibility</p>
     </footer>
 
     <script src="../js/navigation.js"></script>
