--- a/public/color-contrast.html
+++ b/public/color-contrast.html
@@ -267,7 +267,7 @@
     </div>
 
     <footer>
-      <p>© 2026. Thanks for considering accessibility ♥️</p>
+      <p>© 2026. Vincit ♥️ accessibility</p>
     </footer>
 
     <script src="../js/navigation.js"></script>
