--- a/public/structure.html
+++ b/public/structure.html
@@ -493,7 +493,7 @@
     </div>
 
     <footer>
-      <p>© 2026. Thanks for considering accessibility ♥️</p>
+      <p>© 2026. Vincit ♥️ accessibility</p>
     </footer>
 
     <script src="../js/navigation.js"></script>
