--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
         <article class="content-section">
           <h2>Requirements</h2>
           <p>
-            The yellow badges labelled "SC ..." communicate the WCAG Success
-            Criterion (SC) that is/are relevant to each requirement, including
-            the level of conformance. Only levels A and AA are included as they
-            are commonly required by laws.
+            The badges labelled "SC x.x" communicate the WCAG Success Criterion
+            (SC) that is/are relevant to each requirement, including the level
+            of conformance. Only levels A and AA are included as they are
+            commonly required by laws.
           </p>
           <p>
             The SC are linked to
@@ -170,8 +170,8 @@
         <article class="content-section">
           <h2>Recommendations</h2>
           <p>
-            The white badges labelled "Recommendation" means the item is not
-            (yet) covered by WCAG.
+            The badges labelled "Recommendation" means the item is not (yet)
+            covered by WCAG.
           </p>
         </article>
 
